# kombuchalyzer

./: .gitignore  compose.yml
.github/workflows/: build_and_push.yml  build_and_push_frontend.yml
backend/: .env  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8864d83430db_add_simple_brew_table.py  92f3a8dbe1b9_create_users_table.py  ad9c47533d9f_add_password_change_field_to_users.py  d166888ea097_add_totp_information_to_users.py
backend/kbalyzer/: __init__.py  auth.py  lifespan.py  logging.py  main.py  settings.py
backend/kbalyzer/db/: __init__.py  postgres.py
backend/kbalyzer/db/crud/: brews.py  user.py
backend/kbalyzer/db/schemas/: __init__.py  brews.py  user.py
backend/kbalyzer/models/: __init__.py  auth.py  brews.py  general.py  user.py
backend/kbalyzer/routes/: __init__.py  api.py  auth.py  brews.py  docs.py  otp.py
backend/kbalyzer/routes/admin/: __init__.py  user.py
charts/: Chart.yaml  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  postgres.yaml  service.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminRoute.tsx  AdminUsers.tsx  ProtectedRoute.tsx  TOTPSetupModal.tsx  TOTPTurnOffModal.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AccountSettingsPage.tsx  (+3 more)
nginx/: default.conf
(+1 files in other folders)
